# variance-input

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.vm.yml  docker-compose.yml  laravel.env.example  laravel.prod.env.example
medite/app/install_files/: flask_app.py  pyproject.toml
medite/app/variance/: .gitignore  README.md  char_diff.py  diff.raw.xml  probe_chars.py  probe_mismatch.py  processing.py  pyproject.toml  quick_check.py  setup.py  test.raw.html  trace_medite.py
medite/app/variance/assets/srcp/: index.js
medite/app/variance/medite/: medite.py
medite/app/variance/scripts/: diff.py  insert_pb_tags.py  medite2html.py  txt2tei.py
medite/app/variance/suffix-tree/: python_bindings.c  suffix_tree.c
medite/app/variance/tei2xhtml/: tei2xhtml.xsl
medite/app/variance/tei2xhtml/doc/: tei2xhtml.html  tei2xhtml.indexList.html  tei2xhtml0.html
medite/app/variance/tei2xhtml/input/: test.xml
medite/app/variance/tests/: test_legacy.py  test_operations.py  test_processing.py  test_suffix_tree.py  test_tei_writer.py  test_xhtml_writer.py
medite/app/variance/tests/data/BdS/: BdS1835edition.txt  informations.xml
medite/app/variance/tests/data/LaVendetta/: 1vndtt.txt  (+2 more)
medite/app/variance/variance/: canon.py  diff_core.py  io_helpers.py  operations.py  processing.py  tei_writer.py  xhtml_writer.py
medite/app/variance/variance/medite/: aligne.py  alignement.py  medite.py  recouvrement.py  suffix_tree.py  synthetic.py  utile.py  utils.py
medite/app/variance/xhtml/: d.xhtml  i.xhtml  r.xhtml  s.xhtml  source.xhtml  target.xhtml  test.xml
(+444 files in other folders)
