[tool.poetry]
name = "variance"
version = "0.1.0"
description = ""
authors = ["louisChiffre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
ipython = "^8.25.0"
pandas = "^2.2.2"
nltk = "^3.8.1"
tei-reader = "^0.0.17"
ruff = "^0.4.10"
click = "^8.1.7"


lxml = "^5.2.2"
intervaltree = "^3.1.0"
black = "^24.4.2"
testfixtures = "^8.3.0"
rich = "^13.7.1"
tqdm = "^4.67.1"
hypothesis = "^6.130.8"
pyinstrument = "^5.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose"

[tool.poetry.scripts]
diff = "variance.diff:main"